Adds few changes in index

--- a/index.html
+++ b/index.html
@@ -5,10 +5,16 @@
   <title>Happy Trails Travel Agency</title>
 </head>
 <body>
+  <div class="plane">
+    <img src="img/airplane.png">
+  </div>
   <h1>Happy Trails Travel Agency</h1>
   <p class="intro">Welcome to <strong>Happy Trails Travel Agency</strong></p>
   <p>The agency that takes you all over the world. From the bustling cities of Italy and Costa Rica to the tropical islands of Maldives. All you have to tell us is where to go.</p>
   <p>Come fly with us with in luxurious airlines that cater to each of your preferences:</p>
+  <div class="plane">
+    <img src="img/plane.png">
+  </div>
   <h2>Economy class</h2>
   <p><img src="img/econ.jpg" alt="A picture of the interior of our economy class."> Sit back and enjoy with our comfortable economy class.</p>
   <h2>Business class</h2>
@@ -19,6 +25,9 @@
     <li>Tropical Locations</li>
     <li>Popular Locations</li>
 </ul>
+
+  <img src="img/promo.png">
+
   <div class="popular">
   <h2>Popular Destinations</h2>
   <ul>
